[package]
name = "mostro"
version = "0.13.2"
edition = "2021"
license = "MIT"
authors = ["Francisco Calderón <negrunch@grunch.dev>"]
description = "Lightning Network peer-to-peer nostr platform"
homepage = "https://mostro.network"
repository = "https://github.com/MostroP2P/mostro"

[[bin]]
name = "mostrod"
path = "src/main.rs"

[dependencies]
chrono = "0.4.35"
easy-hasher = "2.2.1"
lightning-invoice = { version = "0.33.1", features = ["std"] }
nostr-sdk = { version = "0.40.0", features = ["nip59"] }
serde = { version = "1.0.210" }
toml = "0.8.22"
serde_json = "1.0.128"
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "chrono",
  "uuid",
  "offline",
] }
sqlx-crud = { version = "0.4.0", features = ["runtime-tokio-rustls"] }
tokio = { version = "1.40.0", features = ["full"] }
fedimint-tonic-lnd = "0.2.0"
uuid = { version = "1.8.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }
reqwest = { version = "0.12.1", features = ["json"] }
mostro-core = { version = "0.6.39", features = ["sqlx"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.29", features = ["derive"] }
lnurl-rs = "0.9.0"
openssl = { version = "0.10.66", features = ["vendored"] }
once_cell = "1.20.2"
bitcoin = "0.32.5"
dirs = "6.0.0"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full", "test-util", "macros"] }
