[package]
name = "mostro"
version = "0.14.5"
edition = "2021"
license = "MIT"
authors = ["Francisco Calderón <negrunch@grunch.dev>"]
description = "Lightning Network peer-to-peer nostr platform"
homepage = "https://mostro.network"
repository = "https://github.com/MostroP2P/mostro"

[[bin]]
name = "mostrod"
path = "src/main.rs"

[features]
default = []
startos = []

# cargo release configuration
[package.metadata.release]
# (Default: true) Set to false to prevent automatically running `cargo publish`.
publish = true
# (Default: true) Set to false to prevent automatically pushing commits and tags to the Git remote.
push = true
# (Default: true) Run `cargo test` before release? Highly recommended.
verify = true
# (Default: true) Create a Git tag for the release (e.g., v0.2.1)? You usually want this.
tag = true
# (Default: false) Sign the release commit with GPG?
sign-commit = true
# (Default: false) Sign the release tag with GPG?
sign-tag = true
# Use 'allow-branch' if you release from other branches. Check defaults if needed.
allow-branch = ["main"]

[dependencies]
chrono = "0.4.35"
easy-hasher = "2.2.1"
lightning-invoice = { version = "0.33.1", features = ["std"] }
nostr-sdk = { version = "0.43.0", features = ["nip59"] }
serde = { version = "1.0.210" }
toml = "0.9.5"
serde_json = "1.0.128"
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "chrono",
  "uuid",
  "offline",
] }
sqlx-crud = { version = "0.4.0", features = ["runtime-tokio-rustls"] }
tokio = { version = "1.47.1", features = ["full"] }
fedimint-tonic-lnd = "0.3.0"
uuid = { version = "1.17.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }
reqwest = { version = "0.12.1", features = ["json"] }
mostro-core = { version = "0.6.50", features = ["sqlx"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.45", features = ["derive"] }
lnurl-rs = "0.9.0"
openssl = { version = "0.10.66", features = ["vendored"] }
once_cell = "1.20.2"
bitcoin = "0.32.5"
rpassword = "7.3.1"
argon2 = "0.5"
secrecy = "0.10.0"
dirs = "6.0.0"
clearscreen = "4.0.1"
tonic = "0.14.1"
prost = "0.14.1"
tonic-prost = "0.14.1"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full", "test-util", "macros"] }
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["cors"] }
bech32 = "0.11.0"

[build-dependencies]
tonic-prost-build = "0.14.1"
