[package]
name = "mostro-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dependencies.mostro]
path = ".."

[dependencies.mostro-core]
version = "0.7.0"
features = ["sqlx"]

[dependencies.nostr-sdk]
version = "0.43"

[dependencies.lightning-invoice]
version = "0.33"

[dependencies.lnurl-rs]
version = "0.9.0"
default-features = false
features = ["ureq"]

# Target: Message deserialization
[[bin]]
name = "fuzz_message_deser"
path = "fuzz_targets/fuzz_message_deser.rs"
test = false
doc = false
bench = false

# Target: SmallOrder deserialization
[[bin]]
name = "fuzz_order_deser"
path = "fuzz_targets/fuzz_order_deser.rs"
test = false
doc = false
bench = false

# Target: BOLT11 invoice decoding
[[bin]]
name = "fuzz_bolt11_decode"
path = "fuzz_targets/fuzz_bolt11_decode.rs"
test = false
doc = false
bench = false

# Target: LNURL/Lightning address parsing
[[bin]]
name = "fuzz_lnurl_parse"
path = "fuzz_targets/fuzz_lnurl_parse.rs"
test = false
doc = false
bench = false

# Target: Settings TOML parsing
[[bin]]
name = "fuzz_settings_toml"
path = "fuzz_targets/fuzz_settings_toml.rs"
test = false
doc = false
bench = false

# Target: Message signature verification
[[bin]]
name = "fuzz_signature_verify"
path = "fuzz_targets/fuzz_signature_verify.rs"
test = false
doc = false
bench = false

# Target: MessageKind verify (action/payload matching)
[[bin]]
name = "fuzz_message_verify"
path = "fuzz_targets/fuzz_message_verify.rs"
test = false
doc = false
bench = false

# Target: Full message tuple (Message, Option<Signature>) — the exact entry point
[[bin]]
name = "fuzz_message_tuple"
path = "fuzz_targets/fuzz_message_tuple.rs"
test = false
doc = false
bench = false
