[package]
name = "mostro-cli"
version = "0.10.6"
edition = "2021"
license = "MIT"
authors = [
  "Francisco Calderón <fjcalderon@gmail.com>",
  "Baba O'reily <pinballwizard@nostr.red>",
]
description = "Mostro P2P cli client"
homepage = "https://mostro.network"
repository = "https://github.com/MostroP2P/mostro-cli"

[lib]
name = "mostro_client"
path = "src/lib.rs"

[[bin]]
name = "mostro-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
nostr-sdk = { git  = "https://github.com/rust-nostr/nostr", features = ["nip06", "nip44", "nip59"], rev ="70db575d51965240aab1e1b3f1edab782c0ef625"}
tokio = { version = "1.42.0", features = ["full"] }
comfy-table = "7.0.1"
log = "0.4.17"
uuid = { workspace = true }
dotenvy = "0.15.6"
lightning-invoice = "0.23.0"
reqwest = { version = "0.12.4", features = ["json"] }
mostro-core = { path = "../mostro-core" }
bitcoin_hashes = "0.15.0"
lnurl-rs = "0.9.0"
pretty_env_logger = "0.5.0"
openssl = { version = "0.10.68", features = ["vendored"] }
sqlx = { workspace = true }
bip39 = { version = "2.1.0", features = ["rand"] }
dirs = "5.0.1"
