[package]
name = "mostro-core"
version = "0.6.21"
edition = "2021"
license = "MIT"
authors = ["Francisco Calderón <negrunch@grunch.dev>"]
description = "Mostro Core library"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true, optional = true }
sqlx-crud = { workspace = true, optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
bitcoin = "0.32.5"
bitcoin_hashes = "0.15.0"
nostr-sdk = { git  = "https://github.com/rust-nostr/nostr", features = ["nip06", "nip44", "nip59"], rev ="70db575d51965240aab1e1b3f1edab782c0ef625"}



[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen"]
sqlx = ["dep:wasm-bindgen", "dep:sqlx", "dep:sqlx-crud"]
