[package]
name = "mostro"
version = "0.12.8"
edition = "2021"
license = "MIT"
authors = ["Francisco Calderón <negrunch@grunch.dev>"]
description = "Lightning Network peer-to-peer nostr platform"
homepage = "https://mostro.network"
repository = "https://github.com/MostroP2P/mostro"

[[bin]]
name = "mostrod"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
easy-hasher = "2.2.1"
lightning-invoice = { workspace = true }
nostr-sdk = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sqlx-crud = { workspace = true }
tokio = { version = "1.42.0", features = ["full"] }
fedimint-tonic-lnd = "0.2.0"
uuid = { workspace = true }
reqwest = { version = "0.12.1", features = ["json"] }
mostro-core = { version = "0.6.21", features = ["sqlx"] }
tracing = "0.1.40"
tracing-subscriber = { workspace = true }
config = "0.14.0"
clap = { workspace = true }
lnurl-rs = "0.9.0"
openssl = { version = "0.10.66", features = ["vendored"] }
once_cell = "1.20.2"
bitcoin = "0.32.5"
